<resources>
    <string name="app_name">Smart Home</string>
    <string name="welcome_text">Добро пожаловать!</string>
    <string name="login_text">Войдите в учётную запись!</string>
    <string name="email_text">Электронная почта*</string>
    <string name="password_text">Пароль*</string>
    <string name="start_button">Начать</string>
    <string name="remember_check">Запомнить меня</string>
    <string name="email_example">email@example.com</string>
    <string name="welcome_home_text">Рады видеть вас дома!</string>
    <string name="go_to_main_menu_button">Перейдём в главное меню</string>
    <string name="home_control_text">Управление домом</string>
    <string name="tv_control_text">Управление телевизором</string>
    <string name="account_text">Аккаунт</string>
    <string name="tv_button">Телевизор</string>
    <string name="fridge_button">Холодильник</string>
    <string name="depot_button">Гараж</string>
    <string name="stereo_button">Стерео</string>
    <string name="warm_button">Кондиционер</string>
    <string name="vacuum_button">Пылесос</string>
    <string name="wash_button">Стиральная машина</string>
    <string name="add_button">Добавить</string>
    <string name="change_password_textbutton">Изменить пароль</string>
    <string name="change_username_textbutton">Изменить имя пользователя</string>
    <string name="home_status_textbutton">Статус дома</string>
    <string name="additionals_textbutton">Дополнительные функции</string>
    <string name="exit_textbutton">Выйти</string>
    <string name="tv_logo_mini_text">LG TV</string>
    <string name="on_tv_button">ВКЛ</string>
    <string name="off_tv_button">ВЫКЛ</string>
    <string name="connect_tv_button">ПОДКЛ</string>
    <string name="cinema_tv_button">Кино</string>
    <string name="va_tv_button">Алиса</string>
    <string name="internet_tv_button">Интернет</string>
    <string name="browser_tv_button">Браузер</string>
    <string name="youtube_tv_button">YouTube</string>
    <string name="volume_tv_button">Громкость</string>
</resources>